<resources>
    <string name="app_name">WeatherApp</string>
    <string name="get_location">Get Location</string>
    <string name="current_location">Current Location</string>
    <string name="my_location">My Location</string>
    <string name="sunrise">Sunrise</string>
    <string name="min">Min:</string>
    <string name="max">Max:</string>
    <string name="precipitation_probability">Precipitation Probability</string>
    <string name="rain_chance">Rain Chance</string>
    <string name="_20">20%</string>
    <string name="uv_index">UV Index</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="_5km_h">5km/h</string>
    <string name="something_went_wrong_reopen_the_app">Something went wrong. Reopen the app.</string>
    <string name="_5_km_h">5 km/h</string>
    <string name="today">Today</string>
    <string name="next_7_days">Next 7 days</string>
    <string name="next_7_days_"><![CDATA[Next 7 days>]]></string>
    <string name="similar_temperatures_continuing_with_a_chance_of_rain_tomorrow_amp_tuesday"><![CDATA[Similar temperatures continuing with a chance of rain tomorrow & Tuesday.]]></string>
    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="_20_c">20ºC</string>
    <string name="my_cities">My Cities</string>
    <string name="my_favourites">My Favourites</string>
    <string name="_24_c">24ºC</string>
    <string name="_9">9</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="zaragoza">Zaragoza</string>
    <string name="max_list">Max:</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="historical_data">Historical Data</string>
    <string-array name="filter_options">
        <item>Current Temperature</item>
        <item>Minimum Temperature</item>
        <item>Maximum Temperature</item>
    </string-array>
</resources>