<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/gradient_bg"
    tools:context=".ui.city_details_screen.presentation.CityDetailActivity">

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/addressContainer"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:text="@string/my_location"
                />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text=""
                />
            <LinearLayout
                android:id="@+id/overviewContainer"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="90sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/_24_c"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:text="@string/similar_temperatures_continuing_with_a_chance_of_rain_tomorrow_amp_tuesday"
                    />
                <TextView
                    android:id="@+id/tvWeatherType"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/clear_sky"
                    />

                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvMinTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min"
                        android:textColor="@color/white"
                        />
                    <Space
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvMaxTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/max"/>
                </LinearLayout>
            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>
            <LinearLayout
                android:id="@+id/detailsContainer"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@string/precipitation_probability"
                            android:src="@drawable/ic_prec_prob"
                            android:layout_gravity="center"
                            app:tint="@color/white" />
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:id="@+id/tvPrecipitationProbability"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:text="@string/rain_chance"/>
                        <TextView
                            android:id="@+id/tvPrecipitationProbabilityValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:text="@string/_20" />
                    </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@string/uv_index"
                            android:src="@drawable/ic_uv_index"
                            android:layout_gravity="center"
                            app:tint="@color/white"/>
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:id="@+id/tvUvIndex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:text="@string/uv_index"/>
                        <TextView
                            android:id="@+id/tvUvIndexValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:text="@string/_9" />
                    </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:contentDescription="@string/wind_speed"
                            android:src="@drawable/ic_wind_speed"
                            android:layout_gravity="center"
                            app:tint="@color/white"/>
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp"/>
                        <TextView
                            android:id="@+id/tvWindSpeed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:text="@string/wind_speed"/>
                        <TextView
                            android:id="@+id/tvWindSpeedValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:text="@string/_5_km_h" />
                    </LinearLayout>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/forecastContainer"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">
                <TextView
                    android:id="@+id/tvToday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:text="@string/today"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/next_7_days_"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvToday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                />
            <LinearLayout
                android:id="@+id/defaultAndFavouriteCitiesContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageButton
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/default_cities_icon"
                    android:background="@drawable/round_corner_purple"
                    android:scaleType="fitCenter"
                    android:padding="15dp"
                    android:tooltipText="@string/my_cities"
                    android:contentDescription="@string/my_cities"/>
                <Space
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/favourite_cities_icon"
                    android:background="@drawable/round_corner_purple"
                    android:scaleType="fitCenter"
                    android:tooltipText="@string/my_favourites"
                    android:contentDescription="@string/my_favourites"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>