<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="90dp"
    android:layout_margin="8dp"
    app:cardElevation="3dp"
    app:cardCornerRadius="10dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/hourly_bg">
        <TextView
            android:id="@+id/tvHour"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/time"/>

        <ImageView
            android:id="@+id/ivCondition"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_rainshower"
            android:contentDescription="@string/weather_icon"/>

        <TextView
            android:id="@+id/tvHourlyTemperature"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/_20_c"
            />
    </LinearLayout>

</androidx.cardview.widget.CardView>